bug fix tutorial

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![cleese](pics/silly-walk.jpg)"
+    "![cleese](tutorial/pics/silly-walk.jpg)"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4> 3. PYSPTK </H4>\n",
+    "<h4> 3. PYSPTK </h4>\n",
     "\n",
     "While CLEESE is standalone and does not require any further packages to be work, this tutorial uses extra functions from the <a hrefl=\"http://pysptk.readthedocs.io/en/latest/\">Python Speech Processing Toolkit (pysptk) </a>, to extract and visualize the pitch of the audio files manipulated here. \n",
     "\n",
@@ -161,7 +161,7 @@
    "source": [
     "and use CLEESE to transform the sound with a random pitch profile. This, like all cleese operations, is done by passing to the main cleese function ```cleese.process``` a configuration file which specifies the manipulation we want. Here: cut the file in ```pitch_pars['numWin']``` = 6 time segments, draw a random pitch shift factor at each segment boundary from a Gaussian distribution centered on 0 and standard deviation ```pitch_pars['std']``` = 300cents, and interpolate between segment boundaries using linear ```pitch_pars['BPFType']``` = ramp. (See PDF documentation for more information)\n",
     "\n",
-    "<img src=\"pics/config.png\" alt=\"config\" style=\"width: 600px;\">\n"
+    "<img src=\"tutorial/pics/config.png\" alt=\"config\" style=\"width: 600px;\">\n"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "source": [
     "This, as above, is done by passing to ```cleese.process``` a configuration file which specifies the manipulation we want. Here: cut the file in ```stretch_pars['winLen']``` = 0.5 second time segments, draw a random stretch shift factor at each segment boundary from a Gaussian distribution centered on 1.0 and standard deviation ```stretch_pars['std']``` = 1.5 (where factors >1 correspond to a time stretch, and factors <1 correspond to a time compression), and interpolate between segment boundaries using linear ```stretch_pars['BPFType']``` = ramp. (See PDF documentation for more information)\n",
     "\n",
-    "<img src=\"pics/config_stretch.png\" alt=\"config\" style=\"width: 600px;\"/>"
+    "<img src=\"tutorial/pics/config_stretch.png\" alt=\"config\" style=\"width: 600px;\"/>"
    ]
   },
   {
@@ -477,7 +477,7 @@
    "metadata": {},
    "source": [
     "Instead of generating output files one at a time, CLEESE can be used to generate large numbers of manipulated files, each randomly generated using parameters specified in config files as above. This is achieve by passing to cleese.process an input file argument ```cleese.process(soundData=input_file, configFile=config_file)```, rather than a vector of input data as above ```cleese.process(soundData=wave_in, configFile=config_file, sr=sr)```. Output files are not returned by the function, but directly written in ```main_pars['outPath']```, and the number of output files generated is given by ```main_pars[numFiles]```, all of which are found in the configuration file:\n",
-    "<img src=\"pics/config_batch.png\" alt=\"config\" style=\"width: 600px;\"/>"
+    "<img src=\"tutorial/pics/config_batch.png\" alt=\"config\" style=\"width: 600px;\"/>"
    ]
   },
   {
@@ -525,7 +525,7 @@
    "metadata": {},
    "source": [
     "CLEESE can process files with a series of transformations that follow each other, e.g. first time-stretch the file, then pitch-shift it. This is done by specifying keyword ```'chain': True``` in the configuration ```main_pars```, as well as the list of transformations to be applied, e.g. here ```'transf':('pitch','stretch')```.  \n",
-    "<img src=\"pics/config_chained.png\" alt=\"config\" style=\"width: 600px;\"/>"
+    "<img src=\"tutorial/pics/config_chained.png\" alt=\"config\" style=\"width: 600px;\"/>"
    ]
   },
   {
@@ -845,7 +845,7 @@
    "metadata": {},
    "source": [
     "To find note boundaries, we can e.g. use an external audio editor such as <a href=\"https://www.audacityteam.org\"> Audacity</a>, and measure time positions between notes as ```[0.027, 0.634, 1.137, 1.647, 2.185, 2.649, 3.181]```. \n",
-    "<img src=\"pics/audacity.png\" alt=\"Audacity\" style=\"width: 600px;\"/>"
+    "<img src=\"tutorial/pics/audacity.png\" alt=\"Audacity\" style=\"width: 600px;\"/>"
    ]
   },
   {
